--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="{% static 'css/loginstyle.css' %}">
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container"> <!-- Added container for styling -->
         <h2>Login</h2>
-        
+
+        <!-- Displaying messages, if any -->
         {% if messages %}
             <ul class="messages">
                 {% for message in messages %}
@@ -19,22 +20,27 @@
             </ul>
         {% endif %}
 
+        <!-- Login form -->
         <form method="POST">
             {% csrf_token %}
             
-            <div class="input-group">
+            <!-- Email input -->
+            <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required placeholder="Enter your email">
+                <input type="email" name="email" id="email" required placeholder="Enter your email" class="form-input">
             </div>
-            
-            <div class="input-group">
+
+            <!-- Password input -->
+            <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password" required placeholder="Enter your password">
+                <input type="password" name="password" id="password" required placeholder="Enter your password" class="form-input">
             </div>
             
-            <button type="submit">Login</button>
+            <!-- Submit button -->
+            <button type="submit" class="submit-btn">Login</button>
         </form>
         
+        <!-- Register link -->
         <p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
     </div>
 </body>
